@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jdbi.v3.core.internal.exceptions.Unchecked;
@@ -83,7 +82,7 @@ public class BeanBindingBenchmark {
         dao.create();
         sampleList = Stream.generate(SampleBean::new)
                 .limit(50000)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @TearDown(Level.Iteration)
