@@ -19,7 +19,6 @@ import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.jdbi.v3.core.config.ConfigRegistry;
 import org.jdbi.v3.core.qualifier.QualifiedType;
@@ -62,8 +61,8 @@ public interface QualifiedArgumentFactory {
      * @param factory the factory to adapt
      */
     static QualifiedArgumentFactory adapt(ConfigRegistry config, ArgumentFactory factory) {
-        if (factory instanceof ArgumentFactory.Preparable) {
-            return adapt(config, (ArgumentFactory.Preparable) factory);
+        if (factory instanceof ArgumentFactory.Preparable preparable) {
+            return adapt(config, preparable);
         }
         Set<Annotation> qualifiers = config.get(Qualifiers.class).findFor(factory.getClass());
         return (type, value, cfg) ->
@@ -113,7 +112,7 @@ public interface QualifiedArgumentFactory {
                         factory.prePreparedTypes().stream()
                             .map(QualifiedType::of)
                             .map(qt -> qt.withAnnotations(qualifiers))
-                            .collect(Collectors.toList()));
+                            .toList());
 
                 @Override
                 public Optional<Argument> build(QualifiedType<?> type, Object value, ConfigRegistry cfg) {
