@@ -11,16 +11,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.jdbi.v3.e2e;
+package org.jdbi.v3.sqlobject;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import org.jdbi.v3.sqlobject.SqlObjectPlugin;
 import org.jdbi.v3.sqlobject.customizer.BindBean;
 import org.jdbi.v3.sqlobject.customizer.Define;
 import org.jdbi.v3.sqlobject.statement.SqlBatch;
@@ -53,7 +51,7 @@ public class TestIssue2508 {
 
         List<String> names = data.stream()
             .map(Something::getName)
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(result).containsAll(names);
     }
